fix: layout overflow

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,8 +1,8 @@
 .bg__wrapper {
+  overflow: hidden;
   .container {
     padding: 8.3333333333vw 0 0;
     position: relative;
     width: 100vw;
-    overflow-x: hidden;
   }
 }
